fix: hamburger not working on mobile

--- a/src/css/ui-components.css
+++ b/src/css/ui-components.css
@@ -1,34 +1,3 @@
-.hamburger {
-  display: block;
-  position: relative;
-}
-
-.hamburger,
-.hamburger::before,
-.hamburger::after {
-  background-color: var(--accent-color);
-  width: 2em;
-  height: 3px;
-  border-radius: 1em;
-  transition: transform 0.2s ease-in-out;
-}
-
-.hamburger::before {
-  top: 6px;
-}
-
-.hamburger::after {
-  bottom: 6px;
-}
-
-.hamburger::before,
-.hamburger::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-}
-
 .brand-button {
   display: inline-block;
   padding: 0.5em 1.25em;
